--- a/src/Component/Block/Block.css
+++ b/src/Component/Block/Block.css
@@ -4,11 +4,11 @@
     width: 12rem;
     flex-direction: column;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin: 1.8em;
+    margin: 2em 1em;
 }
 
 .icon-image{
-    margin-left: 1em;
+    margin-left: 0.5em;
     width: 20px;
     height: 20px;
 }
